--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar block container">
         <div class="logo-container">
             <a href="#">
-                <img src="/images/brand.svg" alt="" class="logo">
+                <img src="https://assets-global.website-files.com/5d9a902248623ef932d0da66/5edaca1d81168bf10d8a6864_rankedvote_logo.svg" alt="" class="logo">
             </a>
         </div>
     
