--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p class="org-t" style="align-items: center; text-align: center; color: #8a94a6;">TRUSTED BY TOP ORGANIZATIONS</p>
     <br>
     <div class="org">
-        <div class="org-logo"><img src="/images/adobe.png" alt="" class="org-pic"></div>
+        <div class="org-logo"><img src="https://assets-global.website-files.com/5d9a902248623ef932d0da66/65327213500e83c79137c8f3_Adobe_Corporate_logo.svg-p-500.png" alt="" class="org-pic"></div>
         <div class="org-logo"><a href="#"><img src="/images/card.png" alt="" class="org-pic"></a></div>
         <div class="org-logo"><a href="#"><img src="/images/target.png" alt="" class="org-pic"></a></div>
         <div class="org-logo"><a href="#"><img src="/images/graf.png" alt="" class="org-pic"></a></div>
