--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <br>
     <div class="org">
         <div class="org-logo"><img src="https://assets-global.website-files.com/5d9a902248623ef932d0da66/65327213500e83c79137c8f3_Adobe_Corporate_logo.svg-p-500.png" alt="" class="org-pic"></div>
-        <div class="org-logo"><a href="#"><img src="/images/card.png" alt="" class="org-pic"></a></div>
+        <div class="org-logo"><a href="#"><img src="https://assets-global.website-files.com/5d9a902248623ef932d0da66/62839f54abd622565aaa9a60_Studio_Wildcard_logo.png" alt="" class="org-pic"></a></div>
         <div class="org-logo"><a href="#"><img src="/images/target.png" alt="" class="org-pic"></a></div>
         <div class="org-logo"><a href="#"><img src="/images/graf.png" alt="" class="org-pic"></a></div>
         <div class="org-logo" style="margin-left: 10px;"><a href="#"><img src="/images/spotify.png" alt=""
