--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
     <footer>
         <div class="footer-brand">
-            <img src="/images/brand.svg" alt="logo">
+            <img src="https://assets-global.website-files.com/5d9a902248623ef932d0da66/5edaca1d81168bf10d8a6864_rankedvote_logo.svg" alt="logo">
             <h5 style="  color: #4e5d78;">©2023 RankedVote, LLC. All rights reserved       </h5>
         </div>
         <div class="footer-link">
